--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,13 @@
   --header-height: 64px;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #app {
@@ -23,7 +25,11 @@ html, body {
   color: var(--el-color-primary);
 }
 
-.el-menu--horizontal .el-menu-item:not(.is-disabled):focus, 
+.el-menu--horizontal .el-menu-item:not(.is-disabled):focus,
 .el-menu--horizontal .el-menu-item:not(.is-disabled):hover {
   background-color: var(--el-color-primary-light-9);
-} 
+}
+
+.date-picker {
+  max-width: 320px;
+}
